--- a/environment.yml
+++ b/environment.yml
@@ -2,22 +2,22 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - alembic=1.11.1
+  - alembic
   - boost-cpp
-  - flask=2.2.3
-  - flask-httpauth=4.8.0
-  - flask-migrate=4.0.4
+  - flask
+  - flask-httpauth
+  - flask-migrate
   - flask-sqlalchemy
-  - python=3.10.9
-  - requests=2.31.0
-  - sqlalchemy=2.0.18
+  - python
+  - requests
+  - sqlalchemy
   - sqlite
-  - numpy=1.23.4
+  - numpy
   - swig
   - sphinx
   - sphinx_rtd_theme
   - vina
   - openbabel
   - pip:
-    - chembl-webresource-client==0.10.8
-    - flask-cors==3.0.10
+    - chembl-webresource-client
+    - flask-cors
